# fastapi-socketio-alt

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  Makefile  README.md  environment.yml  pyproject.toml  virtual-packages.yml
.github/workflows/: publish.yml
examples/: app.py
examples/client/threads/: latency_client.py
examples/server/asgi/: latency.py
examples/server/fastapi/: latency.py
fastapi_socketio/: socket_manager.py
static/: latency.html
tests/: test_dummy.py
