[tool.poetry]
name = "fastapi-socketio"
version = "1.0.0"
description = "Rebuild of fastapi-socket with latest dependency versions"
license = "Apache License, Version 2.0"
authors = [
    "Sumin Son <clvswft03@gmail.com>",
    "Srdjan Stankovic <stankovic.srdjo@gmail.com>",
]
maintainers = ["Sumin Son <clvswft03@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/todaypp/fastapi-socketio"
repository = "https://github.com/todaypp/fastapi-socketio"
keywords = [
    "python",
    "websocket",
    "socketio",
    "fastapi",
    "fastapi-socketio",
    "python-socketio",
]
classifiers = ["Framework :: FastAPI", "Environment :: Web Environment"]
packages = [{ include = "fastapi_socketio" }]

[tool.poetry.scripts]
example-app = "examples.app:main"
example-client-threads-latency = "examples.client.threads.latency_client:main"
example-server-asgi-latency = "examples.server.asgi.latency:main"
example-server-fastapi-latency = "examples.server.fastapi.latency:main"

[tool.poetry.dependencies]
python = "~3.10"

fastapi = "0.85.0"
netifaces = "0.11.0"
pydantic = "1.10.2"
python-engineio = "4.3.4"
python-socketio = "5.7.1"
requests = "2.28.1"
starlette = "0.20.4"
uvicorn = "0.18.3"

[tool.poetry.group.dev.dependencies]
black = { version = "22.8.0", allow-prereleases = true }

[tool.poetry.group.test.dependencies]
pytest = "7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
